# snarkOS

cli/: Cargo.toml
