[package]
name = "snarkos-cli"
version = "2.2.7"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A CLI for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "operating-systems" ]
license = "Apache-2.0"
edition = "2021"

[dependencies]
aleo-std = { version = "2.2.7", path = "../aleo-std" }
anstyle = "1"
anyhow = "1.0.79"
bincode = "1.0"
clap = { version = "3.0", features = ["derive", "color", "unstable-styles"] }
colored = "2"
crossterm = "0.27"
indexmap = { version = "2.1", features = ["serde", "rayon"] }
metrics = { version = "2.2.7", path = "../metrics" }
num_cpus = "1"
parking_lot = "0.12"
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3.0", default-features = false }
rayon = "1"
self_update = "0.39"
serde = "1"
serde_json = { version = "1", features = ["preserve_order"] }
snarkos-account = { version = "2.2.7", path = "../account" }
snarkos-display = { version = "2.2.7", path = "../display" }
snarkos-node = { version = "2.2.7", path = "../node" }
snarkos-node-cdn = { version = "2.2.7", path = "../node/cdn" }
snarkos-node-rest = { version = "2.2.7", path = "../node/rest" }
snarkvm = { version = "2.2.7", path = "../snarkvm" }
sys-info = "0.9"
time = "0.3"
thiserror = "1.0"
tokio = { version = "1.28", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = "2.9"
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.26"
